# jeopardy

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json
backend/: .dockerignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md  diesel.toml  main.rs
backend/.cargo/: config.toml
backend/db/migrations/2024-09-08-201202_create_users/: down.sql  up.sql
backend/db/migrations/2024-10-19-183850_create_game_boards/: down.sql  up.sql
backend/db/migrations/2024-10-21-184820_create_questions/: down.sql  up.sql
backend/db/migrations/2024-11-21-173550_board_questions/: up.sql
backend/db/migrations/2024-11-21-173550_create_game_board_question_mappings/: up.sql
backend/db/migrations/2024-12-18-190711_create_games_table/: up.sql
backend/db/migrations/2025-01-14-174500_add_categories_to_gameboard/: down.sql  up.sql
backend/db/migrations/2025-01-14-175735_remove_category_from_board_questions/: down.sql  up.sql
backend/db/migrations/2025-01-16-194913_seed_mock_data/: up.sql
backend/lib/: BUILD.bazel  lib.rs
backend/lib/tests/: lib_spec.rs
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs  pool.rs  schema.rs
backend/src/graphql/: mod.rs  schema.rs  user.rs
backend/src/graphql/mutations/: board_question.rs  game.rs  game_board.rs  game_board_question_mapping.rs  mod.rs  player.rs  question.rs  user.rs
backend/src/graphql/query/: board_question.rs  game.rs  game_board.rs  game_board_question.rs  game_board_question_mapping.rs  mod.rs  player.rs  question.rs  user.rs
backend/src/graphql/types/: board_question.rs  detailed_board_question.rs  game_board_types.rs  mod.rs  question_with_association.rs  question_with_board_info.rs
backend/src/models/: board_question.rs  game.rs  game_board.rs  game_board_question.rs  game_board_question_mapping.rs  mod.rs  player.rs  question.rs  user.rs
backend/tests/: TESTING.md  factories.rs  integration_tests.rs  setup.rs
backend/tests/common/: factories.rs  fixtures.rs  mod.rs  setup.rs
frontend/: BUILD.bazel  README.md  codegen.ts  codegen.yml  package-lock.json  package.json  tsconfig.json  webpack.bazel.config.js  webpack.config.js
frontend/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/page/: app-build-manifest.json  build-manifest.json
frontend/.next/server/chunks/: [root of the server]__ed4bfa._.js.map  [turbopack]_runtime.js  node_modules_next_de7099._.js  node_modules_next_de7099._.js.map
frontend/.next/server/chunks/ssr/: [root of the server]__458507._.js.map  [turbopack]_runtime.js  _da8761._.js  _da8761._.js.map  node_modules_16929d._.js.map  node_modules_454099._.js  node_modules_454099._.js.map  node_modules_next_c6ada2._.js  node_modules_next_c6ada2._.js.map  node_modules_next_dist_6e5af5._.js  src_app_896cde._.js.map  (+3 more)
frontend/.next/static/chunks/: [turbopack]_browser_dev_hmr-client_d6d8d4._.js  [turbopack]_browser_dev_hmr-client_d6d8d4._.js.map  [turbopack]_browser_dev_hmr-client_hmr-client_ts_b203ae._.js  [turbopack]_browser_dev_hmr-client_hmr-client_ts_f877cb._.js  _121fa1._.js  _121fa1._.js.map  _c4c472._.js  _d86153._.js  _d86153._.js.map  _fee5ad._.js  node_modules_@swc_helpers_cjs_00636a._.js.map  node_modules_next_dist_client_e72844._.js  node_modules_next_dist_client_e72844._.js.map  node_modules_next_dist_compiled_107ce8._.js  node_modules_next_dist_compiled_107ce8._.js.map  node_modules_next_dist_compiled_react-dom_1f56dc._.js  node_modules_next_dist_compiled_react-dom_1f56dc._.js.map  node_modules_next_dist_d09de6._.js  node_modules_next_dist_d09de6._.js.map  src_app_c7d265._.css  src_app_favicon_ico_mjs_e3431b._.js  src_app_globals_b52d8e.css  src_app_globals_b52d8e.css.map  src_app_layout_tsx_600847._.js  src_app_page_tsx_e89336._.js
frontend/public/: index.html
frontend/src/: ApolloProvider.jsx  BUILD.bazel  Users.jsx  app.jsx  app.tsx  firebase.ts  index.jsx  index.tsx
frontend/src/__generated__/: fragment-masking.ts  gql.ts  graphql.ts  types.ts
frontend/src/app/: layout.tsx  page.tsx  theme.ts
frontend/src/app/admin/: AdminGameBoardDashboard.tsx  AdminQuestionsDashboard.tsx  AdminUserDashboard.tsx  page.tsx
frontend/src/app/components/: AdminGameBoardDashboard.tsx  AdminQuestionsDashboard.tsx  AdminUserDashboard.tsx  EditCategoryDialog.tsx  EditQuestionModal.tsx  EditTitleDialog.tsx  GameBoardDisplay.tsx  NavBar.tsx  PlaceholderCell.tsx  QuestionCell.tsx  UserCard.tsx  UserDashboard.tsx  UserGameBoardDashboard.tsx  query-result.tsx
frontend/src/app/games/: GameBoardMutation.tsx  GameBoardQuery.tsx  page.tsx
frontend/src/app/hooks/: useBackendUser.tsx  useGameBoardData.tsx
frontend/src/app/lib/: AuthContext.ts  AuthContext.tsx  AuthProvider.tsx  Providers.tsx  apolloClient.ts  apolloClient.tsx  serverQueries.tsx  theme.ts  validateGameBoard.tsx
frontend/src/app/questions/: QuestionMutation.tsx  QuestionQuery.tsx  page.module.css  page.tsx
frontend/src/app/shared-theme/: AppTheme.tsx  ColorModeIconDropdown.tsx  themePrimitives.ts
frontend/src/app/sign-in/: SignIn.tsx  page.module.css  page.tsx
frontend/src/app/sign-up/: SignUp.tsx  page.module.css  page.tsx
frontend/src/app/types/: SaveAction.ts
frontend/src/app/users/: UserMutation.tsx  UserQuery.tsx  page.tsx
frontend/src/graphql/: schema.graphql
frontend/src/graphql/mutations/: boardQuestions.ts  gameBoardQuestionMappings.ts  gameBoards.ts  games.ts  players.ts  questions.ts  users.ts
frontend/src/graphql/queries/: boardQuestions.ts  gameBoardQuestion.ts  gameBoardQuestionMappings.ts  gameBoards.ts  games.ts  players.ts  questions.ts  users.ts
frontend/src/utils/: firebase.tsx
infrastructure/: docker-compose.yaml
tests/: integration_tests.rs  setup.rs
(+39 files in other folders)
