module(
    name = "jeopardy",
    version = "1.0"
)

bazel_dep(name = "rules_rust", version = "0.49.3")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")

########################
##        Rust        ##
########################
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(package = "chrono", version = "0.4.38")
crate.spec(package = "diesel", version = "2.2.4", features = ["postgres", "chrono"])
crate.spec(package = "diesel-async", version = "0.5.0", features = ["postgres", "deadpool"])
crate.spec(package = "tokio", version = "1.40.0", features = ["full"])
crate.from_specs()
use_repo(crate, "crates")
