load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//backend/lib",
        "@crates//:chrono",
        "@crates//:diesel",
        "@crates//:diesel-async",
        "@crates//:tokio",
    ],
)
