load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_library(
    name = "lib",
    srcs = glob(["lib/**/*.rs"]),
    crate_root = "lib/lib.rs",
    edition = "2021",
)

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
       "//backend/lib",             # Your library code, like `lib.rs`
        "@crates//:chrono",
        "@crates//:diesel",         # Diesel ORM for PostgreSQL
        "@crates//:diesel-async",   # Async support for Diesel
        "@crates//:tokio",          # Async runtime
        "@crates//:async-graphql",  # GraphQL implementation for Rust
        "@crates//:axum",           # Axum web framework for serving API
        "@crates//:dotenv",         # For loading environment variables like DATABASE_URL
    ],
)
