[package]
name = "backend"  # The name of your backend crate
version = "0.1.0"
edition = "2021"


[[bin]]
name = "backend" # Name of the binary
# path = "src/main.rs"    # Default path is "src/main.rs"

[dependencies]
axum = "0.7.5"
async-graphql = { version = "7.0.9", default-features = false, features = [
    "chrono",
    "playground",
] }
async-graphql-axum = "7.0.9"
diesel = { version = "2.0", default-features = false, features = [
    "postgres",
    "chrono",
] }
diesel-async = { version = "0.5.0", default-features = false, features = [
    "postgres",
    "deadpool",
] }
tokio = { version = "1.40.0", default-features = false, features = [
    "rt-multi-thread",
] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
axum-server = { version = "0.7.1", default-features = false }
tower-http = { version = "0.6.1", default-features = false, features = [
    "cors",
] }
http = { version = "1.1.0", default-features = false }
deadpool-diesel = { version = "0.6.1", default-features = false, features = [
    "postgres",
] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
regex = "1.11.1"
diesel_migrations = "2.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
