load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "lib",
    srcs = glob(["*.rs"]),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["tests/*.rs"]),
    deps = [
        "//backend/lib",
    ],
)
